--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Digital marketing agencies ensure their strategies align with a business's overall goals by following a structured approach.">
 
-<link rel="canonical" href="https://spotifycorner.netlify.app/">
+<link rel="canonical" href="https://digitreboot.netlify.app">
 
         <title>Digital Marketing Agencies Ensure Their Strategies Align With a business's Goals</title>
 
