--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <img src="https://i.ibb.co/RPJ4X12/digit-reboot-1-9.jpg" alt="Digital-Marketing.jpg">
 
 
-<h2><a href="https://alexpaynesays.github.io/spotifycorner/">The Evolution of Music Streaming: From Cassettes to Spotify</a></h2>
+<h2><a href="https://alex-payne1.gitlab.io/digitreboot/">What Are the Latest Trends in Digital Marketing for Agencies?</a></h2>
 
 <h2>Identify Business Goals</h2>
 
