--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <h1>How Do Digital Marketing Agencies Ensure Their Strategies Align With a business's Goals</h1>
 
-<p>Digital marketing agencies ensure their strategies align with a business's overall goals by following a structured approach that involves several key steps. <a href="https://wwww.digitreboot.com/"> <b> Digital marketing agencies like Digit Reboot</a> </b> take some of the key steps to ensure their strategies align with a business's overall goals:</p>
+<p>Digital marketing agencies ensure their strategies align with a business's overall goals by following a structured approach that involves several key steps. <a href="https://www.digitreboot.com/"> <b> Digital marketing agencies like Digit Reboot</a> </b> take some of the key steps to ensure their strategies align with a business's overall goals:</p>
 
 
 <img src="https://i.ibb.co/RPJ4X12/digit-reboot-1-9.jpg" alt="Digital-Marketing.jpg">
