--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <link rel="canonical" href="https://digitreboot.netlify.app">
 
-        <title>Digital Marketing Agencies Ensure Their Strategies Align With a business's Goals</title>
+        <title>Digital Marketing Agencies Ensure Their Strategies Align With a Business's Goals</title>
 
     <meta name="robots" content="index,follow">
     <style>
@@ -60,9 +60,9 @@
 <div class="container">
 
 
-        <h1>How Do Digital Marketing Agencies Ensure Their Strategies Align With a business's Goals</h1>
+        <h1>How Do Digital Marketing Agencies Ensure Their Strategies Align With a Business's Goals</h1>
 
-<p>Digital marketing agencies ensure their strategies align with a business's overall goals by following a structured approach that involves several key steps. <a href="https://www.digitreboot.com/"> <b> Digital marketing agencies like Digit Reboot</a> </b> take some of the key steps to ensure their strategies align with a business's overall goals:</p>
+<p>Digital marketing agencies ensure their strategies align with a business's overall goals by following a structured approach that involves several key steps. <a href="https://digitreboot.com/"> <b> Digital marketing agencies like Digit Reboot</a> </b> take some of the key steps to ensure their strategies align with a business's overall goals:</p>
 
 
 <img src="https://i.ibb.co/RPJ4X12/digit-reboot-1-9.jpg" alt="Digital-Marketing.jpg">
